<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">帮呀</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
   	<string name="app_name_en">BangBang</string>
	<string name="login_label_username">用户名</string>
	<string name="login_label_nickname">昵称</string>
	<string name="bb_userid">用户id</string>
	<string name="login_label_password">密码</string>
	<string name="login_label_onemore_pw">再次输入密码</string>
	<string name="login_label_current_pw">当前密码</string>
   <string name="login_label_new_password">新密码</string>
	<string name="login_label_new_onemore_pw">再次输入新密码</string>
	<string name="login_label_email">邮箱   </string>
	<string name="login_label_age">年龄   </string>
	<string name="login_label_birthday">生日   </string>
	<string name="editimagehead">编辑头像   </string>
	<string name="edituserinfo">编辑个人资料   </string>
	<string name="showonebb">帮祝详情</string>
	<string name="newbb">新建求助   </string>
	<string name="login">登陆</string>
	<string name="register">注册</string>
	<string name="welcome_notify">体会帮助的快乐</string>
	<string name="sex">性别</string>
	<string name="male">男</string>
	<string name="female">女</string>
	<string name="sexfilter">查看指定用户的帮助</string>
	<string name="filter">筛选</string>
	<string name="send">发送</string>
	<string name="bangpoints">平均得分</string>
	<string name="city">城市</string>
	<string name="clicksetting">点击设置</string>
	<string name="concel">取消</string>
	<string name="confirm">确定</string>
	<string name="clean">清空</string>
	<string name="back">返回</string>
	<string name="accept">接受</string>
   <string name="point">评分</string>
   <string name="close">关闭</string>
	<string name="owner">求助者</string>
	<string name="accepter">帮助者</string>
	<string name="ownerpoints">帮点</string>
	<string name="bangbang_title">帮助标题</string>
	<string name="bangbang_detail">帮助描述</string>
	<string name="bangbang_reward">帮助奖励</string>
	<string name="bangbang_status">帮助状态</string>
	<string name="bangbang_comments">帮助留言</string>
	<string name="bangbang_click_comments">点击留言</string>
	<string name="accepter_get_points">帮助者获得评分</string>
	<string name="publisher_get_points">求助者获得评分</string>
	<string name="reward_tip">选择奖励种类</string>
	<string name="moneyonly">请输入金额</string>
	<string name="yuan">元</string>
	<string name="deadtime">截止时间</string>
	<string name="settime">设置时间</string>
	<string name="syncsns">分享到</string>
	<string name="location">位置信息</string>
	<string name="thisisdetail">帮助的内容描述,150字以内</string>
	<string name="thisistitle">标题,20字以内</string>	
	<string name="published">我求助的</string>
	<string name="accepted">我帮助的</string>
	<string name="findbb">发现求 </string>
	<string name="loading">加载中 </string>		
	<string name="jobstatus_tip">查看指定状态的帮助</string>
	<string name="jobstatus_all">全部状态</string>
	<string name="jobstatus_published">状态:发布</string>
	<string name="jobstatus_accepted">状态:接受</string>
	<string name="jobstatus_completed">状态:完成</string>
	<string name="jobstatus_pointed">状态:评分</string>
	<string name="jobstatus_closed">状态:关闭</string>
	<string name="jobstatus_expired">状态:超时</string>
	<string name="pls_point_to_picker">完成状态，请为帮助您的人评分</string>
	<string name="just_publish">发布状态，您可以等待别人的帮助或关闭本次求助</string>
	<string name="wait_for_help">接受状态，请等待好心人的帮助并注意保持联系</string>	
	<string name="job_colsed">已关闭状态</string>
	<string name="job_timeout_closed">超时已关闭状态</string>
	<string name="pls_do_help">接受状态,请尽快帮助那个着急的人吧</string>
	<string name="pls_point_to_owner">完成状态，请为求助的人评分</string>
	
	<string name="all">全部</string>
	<string name="just_jobstatus_published">发布</string>
	<string name="just_jobstatus_accepted">接受</string>
	<string name="just_jobstatus_pointed">评分</string>
	<string name="just_jobstatus_completed">完成</string>
	<string name="just_jobstatus_closed">关闭</string>
	<string name="just_jobstatus_expired">超时</string>
	<string name="rec_notify">新消息提醒</string>
	<string name="change_password">更改密码</string>
	<string name="check_version_need_update">检查新版本</string>
	<string name="current_version">当前版本</string>
	<string name="giveup">放弃</string>
	<string name="finish">完成</string>
	
	<string name="job_reward_type_rmb">人民币(元)</string>
	<string name="job_reward_type_zan">精神赞美</string>
	<string name="job_reward_type_object">物品</string>
	<string name="job_reward_type_other">其他</string>
	<string name="job_reward_type_null">无</string>

	<string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_release_label">松开即可刷新</string>
    <string name="pull_to_refresh_pull_label">下拉即可刷新</string>
    <string name="loader_more">加载更多</string>
    <string name="getlocation">获取位置信息</string> 
 	<string name="retry_network">重新连接网络</string> 
    
    <string name="find">发现</string>
    <string name="activity">动态</string>
	<string name="create">新建</string>
	<string name="me">我</string>
   	<string name="distance">距离</string>
	
	<string name="profile">个人信息</string>
	<string name="setting">设置</string>
	<string name="about">关于</string>
	<string name="suggestion">建议</string>
	<string name="logout">退出当前账户</string>
	
	<string name="normal">一般</string>
	<string name="comments_hint">请畅所欲言</string>
	
	<string name="share_to_sns">分享到</string>
	<string name="forget_pwd">忘记密码</string>
	<string name="reset_password_identify_code">重置验证码</string>
	<string name="reset_pass_word">重置密码</string>
	<string name="change_pass_word">更新密码</string>
	<string name="req_reset_password_identify_code">获取重置验证码</string>
	
	    <!-- 分享成功失败的 Toast -->
    <string name="weibosdk_demo_toast_share_success">分享成功</string>
    <string name="weibosdk_demo_toast_share_failed">分享失败</string>
    <string name="weibosdk_demo_toast_share_canceled">取消分享</string>
    <string name="serviceEmail">help@bangya365.com</string>
    
	<string name="bangya_about">\n帮呀是一款为用户提供互助平台的APP！\n
	                                您可以向周边的人求助，或帮助身边的人。\n
	                                帮助他人可以获得对方提供的奖励，并相互评分，成为好友。\n
	    							本APP希望在解决大家互相帮助需求的同时，为您与身边陌生人的交友提供一个轻松、纯净和简单的入口\n
	    							</string>	                                
	 <string name="bangya_flow">\n帮助流程：\n
	     用户新建求助->其他用户发现并接受求助->帮助进行中......->帮助完成，互相评分->帮助结束\n</string>
	 <string name="bangya_service">如果您有任何问题或建议，请返回上一层点击建议,或邮件到：</string>
	 
	 <string name="bangya_ourhope">\n体会帮助快乐，发现身边美好！\n
	                                开始旅程吧！\n</string>     
	
</resources>
