<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@drawable/background_white_rectangle"
    >
	<TextView
	    android:id="@+id/right_more_jobstatus_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/jobstatus_tip"
		android:textSize="13sp"
		android:typeface="serif" >
	</TextView>
	<LinearLayout
		android:id="@+id/right_more_seperateline0" 
		style="@style/seperate_line"
		android:orientation="horizontal"
		android:layout_alignLeft="@id/right_more_jobstatus_name"
		android:layout_below="@id/right_more_jobstatus_name"
        />
	<LinearLayout
	    android:id="@+id/right_more_jobstatus_line1"
		android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:layout_alignLeft="@id/right_more_seperateline0"
		android:layout_alignRight="@id/right_more_seperateline0"
		android:layout_below="@id/right_more_seperateline0"
	    >
	
	<TextView
		android:id="@+id/right_more_jobstatus_all"
		style="@style/right_more_chose_textview"
		android:layout_weight="1"
		android:text="@string/all"
		android:background="@drawable/background_right_more_chose"
	></TextView>
	<TextView
		android:id="@+id/right_more_jobstatus_pub"
		style="@style/right_more_chose_textview"		
		android:layout_weight="1"

		android:text="@string/just_jobstatus_published"
		android:background="@drawable/background_right_more_chose"
	></TextView>	
	<TextView
		android:id="@+id/right_more_jobstatus_acc"
		style="@style/right_more_chose_textview"		
		android:layout_weight="1"
		android:text="@string/just_jobstatus_accepted"
		android:background="@drawable/background_right_more_chose"
	></TextView>
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/right_more_jobstatus_line2"
		android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:layout_alignLeft="@id/right_more_seperateline0"
		android:layout_alignRight="@id/right_more_seperateline0"
		android:layout_below="@id/right_more_jobstatus_line1"
	    >

	<TextView
		android:id="@+id/right_more_jobstatus_comp"
		style="@style/right_more_chose_textview"
		android:layout_weight="1"
		android:text="@string/just_jobstatus_completed"
		android:background="@drawable/background_right_more_chose"
	></TextView>
	<TextView
		android:id="@+id/right_more_jobstatus_cls"
		style="@style/right_more_chose_textview"
		android:layout_weight="1"
		android:text="@string/just_jobstatus_closed"
		android:background="@drawable/background_right_more_chose"
	></TextView>
	<TextView
		android:id="@+id/right_more_jobstatus_exp"
		style="@style/right_more_chose_textview"
		android:layout_weight="1"
		android:text="@string/just_jobstatus_expired"
		android:background="@drawable/background_right_more_chose"
	></TextView>

	</LinearLayout>
	
	<TextView
	    android:id="@+id/right_more_sex_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:text="@string/sexfilter"
		android:textSize="13sp"
		android:typeface="serif"
		android:layout_marginLeft="8dp"
		android:layout_below="@id/right_more_jobstatus_line2">
	</TextView>
	<LinearLayout
		android:id="@+id/right_more_seperateline1" 
		style="@style/seperate_line"
		android:orientation="horizontal"
		android:layout_alignLeft="@id/right_more_sex_name"
		android:layout_below="@id/right_more_sex_name"
        />
	<LinearLayout
	    android:id="@+id/right_more_sex"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:layout_alignLeft="@id/right_more_seperateline1"
		android:layout_alignRight="@id/right_more_seperateline1"
		android:layout_below="@id/right_more_seperateline1">
		<TextView
		android:id="@+id/right_more_sex_all"
		style="@style/right_more_chose_textview"
		android:layout_weight="1"
		android:text="@string/all"
		android:background="@drawable/background_right_more_chose"
	></TextView>
	<TextView
		android:id="@+id/right_more_sex_male"
		style="@style/right_more_chose_textview"
		android:layout_weight="1"
		android:text="@string/male"
		android:background="@drawable/background_right_more_chose"
	></TextView>
	<TextView
		android:id="@+id/right_more_sex_female"
		style="@style/right_more_chose_textview"
		android:layout_weight="1"
		android:text="@string/female"
		android:background="@drawable/background_right_more_chose"
	></TextView>	
	</LinearLayout>
	
	<LinearLayout
		android:id="@+id/right_more_seperateline2" 
		style="@style/seperate_line"
		android:orientation="horizontal"
		android:layout_alignLeft="@id/right_more_jobstatus_name"
		android:layout_below="@id/right_more_sex"
		android:visibility="invisible"
        >	</LinearLayout>
	
</RelativeLayout>
