<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
        android:background="@color/background_gray"
    >
   <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_margin="30dp"
    android:text = "关于帮呀"
    android:textSize="20dp"
        />
   <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:orientation="vertical" >
    <LinearLayout
            android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:orientation="vertical" 
    
        >
    <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   android:layout_marginLeft="30dp"
  android:layout_marginRight="30dp"
    android:text="@string/bangya_about"
        />
        <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   android:layout_marginLeft="30dp"
  android:layout_marginRight="30dp"
    android:text="@string/bangya_flow"
        />

    <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="left"
   android:layout_marginLeft="30dp"
  android:layout_marginRight="30dp"
   android:text = "@string/bangya_service"   
        />
    <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="left"
   android:layout_marginLeft="30dp"
  android:layout_marginRight="30dp"
	android:autoLink="all"
   android:text = "@string/serviceEmail"   
        />
    <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   android:layout_marginLeft="30dp"
  android:layout_marginRight="30dp"
    android:text="@string/bangya_ourhope"
        />
   <TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
   android:layout_margin="10dp"
   android:text = "帮呀 团队"   
        />

    </LinearLayout>
    </ScrollView>
    
</LinearLayout>
