<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:orientation="vertical" 
    >
    <!-- the rest of this activity is scrollnable -->
	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
		 android:layout_marginRight="20dp"
        
        >
        <!-- this linearlayout is avoid edittext get focus when into register -->
		<LinearLayout
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:layout_width="0px"
		android:layout_height="0px">
        <requestFocus />
      	</LinearLayout>
  
		<EditText
            android:id="@+id/reset_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:hint="@string/login_label_email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <EditText
            android:id="@+id/reset_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:hint="@string/login_label_new_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/reset_re_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:hint="@string/login_label_new_onemore_pw"
            android:inputType="textPassword"
            android:singleLine="true" />
         <RelativeLayout  
			android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	>
         <EditText
            android:id="@+id/reset_passwd_identify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/reset_password_identify_code"
            android:inputType="text"
            android:singleLine="true" />
         <Button
            android:id="@+id/req_reset_pass_code"
            android:layout_width="wrap_content"             
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/reset_passwd_identify_code"
            android:layout_alignBottom="@id/reset_passwd_identify_code"
            android:layout_toRightOf="@id/reset_passwd_identify_code"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="30dp"
            android:background="@drawable/confirm_background"
            
            android:text="@string/req_reset_password_identify_code"
             />
         </RelativeLayout>

    
    <!-- register button -->
    <Button
        android:id="@+id/reset_pwd_confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/reset_pass_word" 
        android:background="@drawable/confirm_background"
        android:onClick="resetPassWord"/>
    </LinearLayout>
    

</LinearLayout >