<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <!-- my name -->

    <TextView
        android:id="@+id/appname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#33B5E5"
        android:textSize="80sp" />

    <LinearLayout
        android:id="@+id/login_div"
        android:orientation="vertical" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_rectangle"
        android:padding="20dp" >
   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <!-- this linearlayout is avoid edittext get focus when into register -->
		<LinearLayout
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:layout_width="0px"
		android:layout_height="0px">
        <requestFocus />
        </LinearLayout>
        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:inputType="text"
            android:hint="@string/login_label_email"
            android:singleLine="true" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:inputType="textPassword"
            android:hint="@string/login_label_password"
            android:singleLine="true" />

     </LinearLayout>
 	 <Button
            android:id="@+id/forget_pwd"
            android:background="@color/theme_blue"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:textSize="14sp"
            android:text="@string/forget_pwd"
            android:textColor="@color/orange"
            android:onClick="forgetPassword" />
    </LinearLayout>
 <RelativeLayout  
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
         >
        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"
            android:text="@string/login"
			android:onClick="BangBangLogin"/>

    </RelativeLayout>
</LinearLayout>