<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/background_gray"
    >
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:id="@+id/notify_layout"
        android:orientation="horizontal" 
        android:layout_marginTop="3dp"
        android:background="@drawable/list_item_selector">
        <TextView
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:textColor="@color/gray"
    		android:layout_marginTop="8dp"
    		android:layout_marginBottom="8dp"
    		android:layout_marginLeft="8dp"    		
    		android:text="@string/rec_notify"
    		android:layout_gravity="center"
    		android:textSize="18sp">
    	</TextView>
		<TextView
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
    	>
    	</TextView>
    <Switch
        android:id="@+id/switch_notify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_gravity="center"
        />
	</LinearLayout>
			<View  
	   android:id="@+id/divider_1"
   		android:layout_width="fill_parent"  
    	android:layout_height="1dp" 
    	android:layout_marginTop="3dp"
    	android:layout_below="@id/notify_layout"
   		android:background="?android:attr/listDivider"  
			/>  

        <TextView
          android:id="@+id/change_password"
          android:layout_below="@id/divider_1"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:textColor="@color/gray"
    		android:layout_marginTop="8dp"
    		android:layout_marginBottom="8dp"
    		android:layout_marginLeft="8dp"    		
    		android:text="@string/change_password"
    		android:layout_gravity="center"
    		android:textSize="18sp"
    		android:background="@drawable/list_item_selector">
    	</TextView>
		<View  
	   android:id="@+id/divider_2"
   		android:layout_width="fill_parent"  
    	android:layout_height="1dp" 
    	android:layout_marginTop="3dp"
    	android:layout_below="@id/change_password"
   		android:background="?android:attr/listDivider"  
			/> 
			<LinearLayout
			android:id="@+id/check_version_update"
			android:layout_below="@id/divider_2"
			android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal" 
    		android:gravity="center_vertical" 
    		android:background="@drawable/list_item_selector"
			    > 
        <TextView
          android:id="@+id/tv_check_version_update"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:textColor="@color/gray"
    		android:layout_marginTop="8dp"
    		android:layout_marginBottom="8dp"
    		android:layout_marginLeft="8dp"    		
    		android:text="@string/check_version_need_update"
    		android:layout_gravity="center"
    		android:textSize="18sp">    	
    		</TextView>

        	<ImageView 
    	   android:id="@+id/check_version_notification"
    	   android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
          android:layout_marginLeft="5dp"
          android:background="@drawable/ui_notification_large"
    	    />
        			<TextView
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
    	>
    	</TextView>
       <TextView
    	   android:id="@+id/tv_current_version"
    	   android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    	    android:text="@string/current_version"
    		android:layout_gravity="center"
    		android:textSize="12sp"
    		android:textColor="@color/gray">
      </TextView>
      <TextView
    	   android:id="@+id/tv_current_version_input"
    	   android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    	    android:text="@string/current_version"
    		android:layout_gravity="center"
    		android:layout_marginRight="5dp"
    		android:textSize="12sp"
    		android:textColor="@color/gray">
      </TextView>
	</LinearLayout>
        
</RelativeLayout>
